--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "preuba-tecnica": {
+    "prueba-tecnica": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/preuba-tecnica",
+            "outputPath": "dist/prueba-tecnica",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "preuba-tecnica:build"
+            "browserTarget": "prueba-tecnica:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "preuba-tecnica:build:production"
+              "browserTarget": "prueba-tecnica:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "preuba-tecnica:build"
+            "browserTarget": "prueba-tecnica:build"
           }
         },
         "test": {
@@ -114,15 +114,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "preuba-tecnica:serve"
+            "devServerTarget": "prueba-tecnica:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "preuba-tecnica:serve:production"
+              "devServerTarget": "prueba-tecnica:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "preuba-tecnica"
+  "defaultProject": "prueba-tecnica"
 }
